<resources>
    <string name="app_name">FigmaLayoutExample</string>
    <string name="signup">Sign Up</string>
    <string name="signin">Sign In</string>
    <string name="SIGNIN">SIGN IN</string>
    <string name="SIGNUP">SIGN UP</string>
    <string name="regis">REGISTER</string>
    <string name="question">Already have an account?</string>
    <string name="questionnothave">Don`t have an account?</string>
    <string name="skip">Skip</string>
    <string name="forgot">Forgot password?</string>
    <string name="reset">Reset here</string>
    <string name="text">We are so excited you’re ready to become a part of our coffee network! don’t forget to check out your perks!</string>
    <string name="username">Username</string>
    <string name="email">Email or phone number</string>
    <string name="password">Password</string>
    <string name="textin">It’s coffee time! Login and lets get all the coffee in the world! Or at least iced coffee.</string>
    <string name="login">LOGIN</string>
    <string name="create">CREATE NEW ACCOUNT</string>
    <string name="Home">Home</string>
    <string name="scan">Scan / Pay</string>
    <string name="order">Order</string>
    <string name="acc">Account</string>
    <string name="rewards">Rewards</string>
    <string name="good">Good morning!</string>
    <string name="yay">Yay for Coffeeeee!</string>
    <string name="bonus">BONUS REWARDS</string>
    <string name="delivered">Coffee Delivered to your house</string>
    <string name="twobags">Order 2 bags of coffee and get bonus stars!</string>
    <string name="stars">Order any of our coffee and get an additional 30 Stars! Now that’s how you get free coffee!</string>
    <string name="shop">Shop now</string>
    <string name="favourite">Your favorites</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>