<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8EBD8">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.060000002"
        app:srcCompat="@drawable/coffeeshot_logo" />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:background="#FAFAFA"
        app:cardCornerRadius="34dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <LinearLayout
            android:id="@+id/editLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="46dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="46dp"
            android:layout_marginBottom="40dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signin"
                android:textColor="#4B2C20"
                android:textSize="28sp"
                android:textStyle="bold"
                tools:text="@string/signin" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/textin"
                android:textColor="#4B2C20"
                android:textSize="14sp"
                tools:text="@string/textin" />


            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/email"
                android:textColor="#4E8D7C"
                android:textSize="14sp"
                tools:text="@string/email" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_name1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="25dp"
                app:cardElevation="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FEFEFE"
                    android:textColorHint="@color/greyhint"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#FEFEFE"
                        android:hint="Type your email or phone number"
                        android:inputType="text|textEmailAddress|number|phone"
                        android:paddingTop="10dp"
                        />
                </com.google.android.material.textfield.TextInputLayout>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/password"
                android:textColor="#4E8D7C"
                android:textSize="14sp"
                tools:text="@string/password" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="25dp"
                app:cardElevation="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutNoBorder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FEFEFE"
                    android:textColorHint="@color/greyhint"
                    app:hintEnabled="false"
                    app:hintTextColor="@color/greyhint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/ic_unwatching"
                        android:hint="Type your password"
                        android:inputType="text|textPassword"
                        android:paddingBottom="18dp"
                        android:paddingEnd="3dp"
                        android:textColorHighlight="@color/greyhint" />
                </com.google.android.material.textfield.TextInputLayout>
            </com.google.android.material.card.MaterialCardView>

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:height="60dp"
                android:backgroundTint="@color/brown"
                android:text="@string/login"
                android:textSize="14sp"
                app:cornerRadius="22dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/forgot"
                    android:textAlignment="textEnd"
                    android:textColor="#4E8D7C"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:text="@string/reset"
                    android:textColor="@color/brown"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textAlignment="textStart"/>
            </LinearLayout>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/questionnothave"
                android:textAlignment="center"
                android:textSize="14sp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:height="60dp"
                android:backgroundTint="@color/brown"
                android:text="@string/create"
                android:textSize="14sp"
                app:cornerRadius="22dp" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>