<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home">

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="360dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="100dp"
        android:scrollbars="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linLay"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="160dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="match_parent"
                        android:layout_height="223dp"
                        android:paddingStart="20dp"
                        android:paddingTop="20dp"
                        android:paddingEnd="20dp"
                        android:paddingBottom="10dp"
                        android:src="@drawable/drink1" />

                    <TextView
                        android:id="@+id/textView16"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Iced Pumpkin Spice Latte"
                        android:textAlignment="center"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="12dp"
                app:cardCornerRadius="10dp"
                android:layout_marginBottom="10dp">

                <LinearLayout
                    android:layout_width="160dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="match_parent"
                        android:layout_height="223dp"
                        android:paddingStart="20dp"
                        android:paddingTop="20dp"
                        android:paddingEnd="20dp"
                        android:paddingBottom="10dp"
                        android:src="@drawable/drink2" />

                    <TextView
                        android:id="@+id/textView17"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Mocha Cookie Frozen Blended Coffee"
                        android:textAlignment="center"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="10dp"
                android:layout_marginBottom="10dp">

                <LinearLayout
                    android:layout_width="160dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="match_parent"
                        android:layout_height="223dp"
                        android:paddingStart="20dp"
                        android:paddingTop="20dp"
                        android:paddingEnd="20dp"
                        android:paddingBottom="10dp"
                        android:src="@drawable/drink1" />

                    <TextView
                        android:id="@+id/textView77"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Mocha Cookie Frozen Blended Coffee"
                        android:textAlignment="center"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </HorizontalScrollView>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.84000003">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="151dp"
            android:background="@color/green"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/green"
                android:paddingStart="10dp"
                android:text="@string/bonus"
                android:textColor="@color/home"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@color/green"
                android:paddingStart="10dp"
                android:text="@string/delivered"
                android:textColor="@color/home"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:layout_marginTop="20dp"
                android:background="@color/home"
                android:paddingStart="10dp"
                android:text="@string/twobags"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="66dp"
                android:background="@color/home"
                android:paddingStart="10dp"
                android:text="@string/stars"
                android:textSize="14sp" />
        </LinearLayout>


        <Button
            android:id="@+id/button4"
            android:layout_width="106dp"
            android:layout_height="36dp"
            android:layout_marginStart="235dp"
            android:layout_marginTop="120dp"
            android:backgroundTint="@color/brown"
            android:padding="0dp"
            android:text="@string/shop"
            android:textSize="14sp" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.68">

        <LinearLayout
            android:layout_width="13dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/good"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/yay"
                android:textAlignment="center"
                android:textSize="20sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/coffee_bar" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>